mira/mira_graphql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: null
  generation: 1
  labels:
    run: mira-graphql
  name: mira-graphql
  namespace: mira
  selfLink: /apis/extensions/v1beta1/namespaces/mira/deployments/mira-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mira-graphql
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mira-graphql
    spec:
      containers:
      - env:
        - name: HOST
          value: "elasticsearch-master:9200"
        image: inodb/mira-graphql:staging
        imagePullPolicy: Always
        name: mira-graphql
        ports:
        - containerPort: 4000
          protocol: TCP
        resources:
          limits:
              memory: 2.5Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mira-graphql
    app: mira-graphql
  name: mira-graphql
  namespace: mira
  selfLink: /api/v1/namespaces/mira/services/mira-graphql
spec:
  ports:
  - port: 4000
    name: http
    targetPort: 4000
  selector:
    run: mira-graphql
  type: ClusterIP
