mira/mira_react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: null
  generation: 1
  labels:
    run: mira-react
  name: mira-react
  namespace: mira
  selfLink: /apis/extensions/v1beta1/namespaces/mira/deployments/mira-react
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mira-react
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mira-react
    spec:
      containers:
      - image: inodb/mira-react:staging
        imagePullPolicy: Always
        name: mira-react
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
              memory: 2.5Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mira-react
    app: mira-react
  name: mira-react
  namespace: mira
  selfLink: /api/v1/namespaces/mira/services/mira-react
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    run: mira-react
  type: ClusterIP
