mira/ingress_mira.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mira-ingress
  namespace: mira
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  tls:
  - hosts:
    - mira.cbioportal.org
    secretName: mira-v2-cert
  rules:
  - host: mira.cbioportal.org
    http:
      paths:
      - path: /
        backend:
          serviceName: mira-react
          servicePort: http
      - path: /graphql
        backend:
          serviceName: mira-graphql
          servicePort: http
